# pipeline-brfss

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: upload-release.yml
data/: mapeamento_colunas_sugerido.csv  novo_mapeamento_colunas_sugerido.csv
src/: README.md  inspecionar_colunas.py  pipeline_brfss.py
src/pipeline_dados_brfss/: pipeline_brfss.py
