[tool.poetry]
name = "pipeline-dados-brfss"
version = "0.1.0"
description = "Pipeline para limpeza e tratamento de dados visando aplicação em aprendizado de máquinas"
authors = ["Adria Barreto <adriabarreto12@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pipeline_dados_brfss", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
ipython = ">=8.0,<9.0"
ipywidgets = "==8.1.2"
jupyterlab = "==4.2.1"
jupyterlab-widgets = "==3.0.10"
matplotlib = "==3.10.3"
notebook = "==7.2.0"
numpy = "==2.2.6"
packaging = "==24.1"
pandas = "==2.2.3"
plotly = "==6.2.0"
pyreadstat = "==1.3.0"
python-dateutil = "==2.9.0"
requests = "==2.32.3"
scikit-learn = "==1.6.1"
scipy = "==1.15.3"
seaborn = "==0.13.2"
six = "==1.16.0"
tornado = "==6.4"
traitlets = "==5.14.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
